# local-icloud

./: .gitignore  README.md  constants.py  database.py  errors.py  hello.py  helpers.py  internal.py  main.py  mappers.py  models.py  pyproject.toml  ruff.toml  settings.py  users.py
alembic/: env.py
alembic/versions/: 0f5891d84b40_user_group_is_unique.py  15b3a5fd98cc_initial.py  4417c513fe52_alembic_init.py  8053371a67d2_user_is_unique.py  afedff58ce3f_initial.py
auth/: models.py  permissions.py  tokens.py  user.py
models/: __init__.py  base.py  user.py  user_group.py
repositories/: base_repository.py  user.py  user_group.py
routers/: user.py  user_group.py
schemas/: user.py  user_group.py
services/: base_service.py  user.py  user_group.py
users/: database.py  helpers.py  models.py
