[project]
name = "local-icloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.1",
    "argon2-cffi>=23.1.0",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.115.6",
    "ipdb>=0.13.13",
    "pillow>=11.0.0",
    "psycopg[binary]>=3.2.4",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.37",
]
